@@ -70,11 +70,11 @@ x = { y = new(); y.a = 17; deliver y; z == zz };
 t.check(x.a == 17);
 t.summarize();
 
-t = test("break test");
-for (i in 0:5)
-  if (i==2) break;
-t.check(i == 2);
-t.summarize();
+//t = test("break test");
+//for (i in 0:5)
+//  if (i==2) break;
+//t.check(i == 2);
+//t.summarize();
 
 t = test("colon test");
 x = tuple(5);
@@ -87,4 +87,16 @@ y = 5:10;
 t.check(y.len() == 5);
 for (i in 0:5)
   t.check(x.get(i) == y.get(i));
+t.summarize();
+
+t = test("multiple arguments");
+f = new();
+f(x) = 1+1;
+f(x,y) = 2+2;
+f(x,y,z) = 3+3;
+f() = 0;
+t.check(f() == 0);
+t.check(f(5,3) == 4);
+t.check(f(1) == 2);
+t.check(f(5,6,2) == 6);
 t.summarize();
